Added possibility to set and check command permissions at a per-user basis. Switch IDE automatic formatting to Google Java Style Guide (a lot of lines modified).